--- a/gsp-text-scoll-reveal/style.css
+++ b/gsp-text-scoll-reveal/style.css
@@ -30,6 +30,7 @@ body {
 .container .text {
   font-size: 90px;
   font-family: 'Courier New', Courier, monospace;
+  font-weight: 700;
 }
 .text > p {
   background: linear-gradient(
@@ -42,6 +43,6 @@ body {
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
-  margin-bottom: 10px;
+  margin-bottom: -100px;
   margin-left: 50px;
 }
